package at.htl.cinemareservation.model;

public class Row {
}
