@startuml

class Room{
-roomNumber: int
}
class Movie{
-length: int
-title: String
-genre: String
-price: double
}

class Row{
-room: Room
-additionalCharge: double
}

class Seat{
-row: int
-place: int
}

class Presentation{
-startTime: LocalDateTime
}

class Price{
-presentation: Presentation
-row: Row
-specialPrice: double
}

class Ticket{
-seat: Seat
-presentation: Presentation
}

Room "1" <-- "*" Row
Room "1" <-- "*" Presentation

Movie "1" <-- "*" Presentation
Presentation "1" <-- "*" Price
Presentation "1" <-- "*" Ticket
Row "1" <-- "*" Price
Seat "1" <-- "*" Ticket
Seat "*" <-- "1" Row

@enduml